Style updates to prevent layout shift

--- a/styles/components/blocks/autofunction.scss
+++ b/styles/components/blocks/autofunction.scss
@@ -91,7 +91,7 @@
       }
     }
 
-    pre.line-numbers {
+    pre {
       margin: 0;
 
       .table {
